@@ -15,6 +15,7 @@ categories = ["command-line-utilities"]
 [dependencies]
 anyhow = "1.0.44"
 atty = "0.2.14"
+bat = { version = "0.18.3", features = ["regex-fancy"], default-features = false }
 deser-hjson = "1.0.2"
 dialoguer = { version = "0.9.0", default-features = false }
 directories = "4.0.1"
